force-app/main/default/objects/Tenant__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Tenant email - demonstrates Email field type with validation</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>