force-app/main/default/objects/Tenant__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Tenant phone - demonstrates Phone field type</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>