force-app/main/default/objects/Tenant__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <description>Security deposit amount</description>
    <label>Security Deposit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>