force-app/main/default/objects/Tenant__c/fields/Tenant_Status__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Status__c</fullName>
    <description>Current tenant status</description>
    <label>Tenant Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>